--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         <div class="content-section">
             <h2>About Me</h2>
             <p class="about-text">
-                I'm Tanjeem, a Ph.D. student (Fall'25) in the Joint CMU-Pitt Ph.D Program in Computational Biology, under Carnegie Mellon University's School of Computer Science. I completed my undergraduate from the <a href="#">Department of Computer Science & Engineering at Bangladesh University of Engineering and Technology (BUET)</a>. My research interests lie in Bioinformatics, Algorithms and Machine Learning.
+                I'm saidul, a Ph.D. student (Fall'25) in the Joint CMU-Pitt Ph.D Program in Computational Biology, under Carnegie Mellon University's School of Computer Science. I completed my undergraduate from the <a href="#">Department of Computer Science & Engineering at Bangladesh University of Engineering and Technology (BUET)</a>. My research interests lie in Bioinformatics, Algorithms and Machine Learning.
             </p>
             <p class="about-text">
                 Outside of my academic pursuits, I am an avid fan of my favorite soccer club — which would explain my fascination with Olympiakos during middle and high school. In my free time, I enjoy playing soccer, watching anime, or covering OSTs on the violin.
