--- a/index.html
+++ b/index.html
@@ -505,21 +505,21 @@
             <div class="profile-left">
                <img src="WhatsApp Image 2025-11-28 at 09.51.21_1f6eb317.jpg" alt="" class="profile-img">
                 <h1>Saidul Islam <span class="gender-symbol">♂</span></h1>
-                <p class="subtitle">Ph.D. Student</p>
-                <p class="university">Carnegie Mellon University, SCS</p>
+                <p class="subtitle">CSE Graduate</p>
+                <p class="university">North South University, DHAKA </p>
                 <div class="email-section">
                     <div class="email-icon"></div>
                     <div class="email-content">
                         <div class="email-label">EMAIL</div>
-                        <a href="mailto:saidul.tanjeemzaman@gmail.com" class="email-link">saidul.tanjeemzaman@gmail.com</a>
+                        <a href="mailto:saidul.islam0.cs@gmail.com" class="email-link">saidul.islam0.cs@gmail.com</a>
                     </div>
                 </div>
             </div>
 
             <div class="research-interests">
                 <div class="venn-diagram">
-                    <div class="circle circle1">Algorithms</div>
-                    <div class="circle circle2">Bioinformatics</div>
+                    <div class="circle circle1">Computer Vision </div>
+                    <div class="circle circle2">Ethical AI </div>
                     <div class="circle circle3">Machine Learning</div>
                 </div>
                 <p class="research-title">My Research Interests</p>
@@ -529,11 +529,32 @@
         <div class="content-section" id="about">
             <h2>About Me</h2>
             <p class="about-text">
-                I'm Saidul Islam, a Ph.D. student (Fall'25) in the Joint CMU-Pitt PhD Program in Computational Biology, under Carnegie Mellon University's School of Computer Science. I completed my undergraduate from the <a href="#">Department of Computer Science & Engineering (CSE)</a> at <a href="#">Bangladesh University of Engineering and Technology (BUET)</a>. My research interests lie in Bioinformatics, Algorithms and Machine Learning.
+                Welcome! I am Saidul Islam, a passionate researcher with strong interests in Machine Learning, Computer Vision, Clinical Machine Learning, and Ethical AI. I completed my undergraduate degree in Computer Science and Engineering from North South University, where I graduated with a score of 88%.
+Currently, I am a Junior ML Developer at NIPRO JMI LTD, where I contribute to building applied machine learning solutions for medical diagnostics, with hands-on experience developing predictive models for diabetes risk assessment and tumor classification.”
+My core research focuses on advancing adversarial-resilient robust computer vision models , with a particular emphasis on fairness-aware, high-performance object detection for autonomous and security-critical systems.
+I am deeply interested in developing energy-efficient learning, focusing on pruning, compression, and edge-deployment strategies that push the boundaries of real-time intelligence. Moving forward, I aspire to engineer responsible AI ecosystems that balance performance, efficiency, and ethical integrity under operational constraints.
+
+Beyond academia, I am an avid traveler and passionate photographer. I have worked as a freelance photojournalist, and I also enjoy horse riding. I genuinely enjoy insightful discussions on history, geography, theology and discussions on business and entrepreneurship.
+I am always open to collaborative research opportunities and actively exploring research-based MS or PhD programs to further pursue my research ambitions and contribute to advancing the field.
+
             </p>
             <p class="about-text">
-                Outside of my academic pursuits, I am an avid fan of problem-solving — which would explain my fascination with Olympiads during middle and high school. In my free time, I enjoy playing soccer, watching anime, or covering OSTs on the violin.
+                Welcome! I am Saidul Islam, a passionate researcher with strong interests in Machine Learning, Computer Vision, Clinical Machine Learning, and Ethical AI. I completed my undergraduate degree in Computer Science and Engineering from North South University, where I graduated with a score of 88%.
             </p>
+            <p class="about-text">
+                Currently, I am a Junior ML Developer at NIPRO JMI LTD, where I contribute to building applied machine learning solutions for medical diagnostics, with hands-on experience developing predictive models for diabetes risk assessment and tumor classification.
+            </p>
+            <p class="about-text">
+                My core research focuses on advancing adversarial-resilient robust computer vision models , with a particular emphasis on fairness-aware, high-performance object detection for autonomous and security-critical systems.
+                I am deeply interested in developing energy-efficient learning, focusing on pruning, compression, and edge-deployment strategies that push the boundaries of real-time intelligence. Moving forward, I aspire to engineer responsible AI ecosystems that balance performance, efficiency, and ethical integrity under operational constraints.
+            </p>
+            <p class="about-text">
+                Beyond academia, I am an avid traveler and passionate photographer. I have worked as a freelance photojournalist, and I also enjoy horse riding. I genuinely enjoy insightful discussions on history, geography, theology and discussions on business and entrepreneurship.      
+            </p>
+            <p class="about-text">
+                I am always open to collaborative research opportunities and actively exploring research-based MS or PhD programs to further pursue my research ambitions and contribute to advancing the field.
+           </p>
+
         </div>
 
         <div class="content-section" id="resume">
