--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             color: #2d3748;
         }
 
-        .gender-symbol {
+        .github-symbol {
             color: #888;
             font-size: 24px;
             margin-left: 8px;
@@ -179,19 +179,19 @@
         }
 
         .circle1 {
-            background: #90EE90;
+            background: #6ddb6d;
             left: 5px;
             top: 5px;
         }
 
         .circle2 {
-            background: #87CEEB;
+            background: #4ba0c2;
             right: 5px;
             top: 5px;
         }
 
         .circle3 {
-            background: #DDA0DD;
+            background: #b65eb6;
             left: 50%;
             transform: translateX(-50%);
             bottom: 5px;
@@ -504,9 +504,9 @@
         <div class="header-section">
             <div class="profile-left">
                <img src="WhatsApp Image 2025-11-28 at 09.51.21_1f6eb317.jpg" alt="" class="profile-img">
-                <h1>Saidul Islam <span class="gender-symbol">♂</span></h1>
+                <h1>Saidul Islam <span class="giyhub-symbol"><img src="icons8-github-32.png" alt="" class="github-icon"></span></h1>
                 <p class="subtitle">CSE Graduate</p>
-                <p class="university">North South University, DHAKA </p>
+                <p class="university">North South University, Dhaka </p>
                 <div class="email-section">
                     <div class="email-icon"></div>
                     <div class="email-content">
@@ -519,7 +519,7 @@
             <div class="research-interests">
                 <div class="venn-diagram">
                     <div class="circle circle1">Computer Vision </div>
-                    <div class="circle circle2">Ethical AI </div>
+                    <div class="circle circle2">Clinical Machine Learning </div>
                     <div class="circle circle3">Machine Learning</div>
                 </div>
                 <p class="research-title">My Research Interests</p>
@@ -529,30 +529,20 @@
         <div class="content-section" id="about">
             <h2>About Me</h2>
             <p class="about-text">
-                Welcome! I am Saidul Islam, a passionate researcher with strong interests in Machine Learning, Computer Vision, Clinical Machine Learning, and Ethical AI. I completed my undergraduate degree in Computer Science and Engineering from North South University, where I graduated with a score of 88%.
-Currently, I am a Junior ML Developer at NIPRO JMI LTD, where I contribute to building applied machine learning solutions for medical diagnostics, with hands-on experience developing predictive models for diabetes risk assessment and tumor classification.”
-My core research focuses on advancing adversarial-resilient robust computer vision models , with a particular emphasis on fairness-aware, high-performance object detection for autonomous and security-critical systems.
-I am deeply interested in developing energy-efficient learning, focusing on pruning, compression, and edge-deployment strategies that push the boundaries of real-time intelligence. Moving forward, I aspire to engineer responsible AI ecosystems that balance performance, efficiency, and ethical integrity under operational constraints.
-
-Beyond academia, I am an avid traveler and passionate photographer. I have worked as a freelance photojournalist, and I also enjoy horse riding. I genuinely enjoy insightful discussions on history, geography, theology and discussions on business and entrepreneurship.
-I am always open to collaborative research opportunities and actively exploring research-based MS or PhD programs to further pursue my research ambitions and contribute to advancing the field.
-
+                Welcome! I am <strong>Saidul Islam</strong>, a passionate researcher with strong interests in <strong>Machine Learning</strong>, <strong>Computer Vision</strong>, <strong>Clinical Machine Learning</strong>, and <strong>Ethical AI</strong>. I completed my undergraduate degree in <span style="color: rgb(32, 18, 186);">Computer Science and Engineering</span> from <a href="https://www.northsouth.edu"> North South University </a>, where I graduated with a score of 88% (3.44 / 4.00).
             </p>
             <p class="about-text">
-                Welcome! I am Saidul Islam, a passionate researcher with strong interests in Machine Learning, Computer Vision, Clinical Machine Learning, and Ethical AI. I completed my undergraduate degree in Computer Science and Engineering from North South University, where I graduated with a score of 88%.
+                Currently, I am a <strong>Junior ML Developer</strong> at <a href="https://www.niprojmipharma.com/">NIPRO JMI LTD</a>, where I contribute to building applied machine learning solutions for medical diagnostics, with hands-on experience developing predictive models for diabetes risk assessment and tumor classification.
             </p>
             <p class="about-text">
-                Currently, I am a Junior ML Developer at NIPRO JMI LTD, where I contribute to building applied machine learning solutions for medical diagnostics, with hands-on experience developing predictive models for diabetes risk assessment and tumor classification.
+                My core research focuses on advancing adversarial-resilient robust computer vision models, with a particular emphasis on fairness-aware, high-performance object detection for autonomous and security-critical systems.
+                I am deeply interested in developing energy-efficient learning, focusing on pruning, compression, and edge-deployment strategies that push the boundaries of real-time intelligence. 
             </p>
             <p class="about-text">
-                My core research focuses on advancing adversarial-resilient robust computer vision models , with a particular emphasis on fairness-aware, high-performance object detection for autonomous and security-critical systems.
-                I am deeply interested in developing energy-efficient learning, focusing on pruning, compression, and edge-deployment strategies that push the boundaries of real-time intelligence. Moving forward, I aspire to engineer responsible AI ecosystems that balance performance, efficiency, and ethical integrity under operational constraints.
+                Beyond academia, I am an avid traveler and passionate photographer. I have worked as a freelance photojournalist and I also enjoy horse riding. I genuinely enjoy insightful discussions on history, geography, theology and brainstorming business and entrepreneurship. 
             </p>
             <p class="about-text">
-                Beyond academia, I am an avid traveler and passionate photographer. I have worked as a freelance photojournalist, and I also enjoy horse riding. I genuinely enjoy insightful discussions on history, geography, theology and discussions on business and entrepreneurship.      
-            </p>
-            <p class="about-text">
-                I am always open to collaborative research opportunities and actively exploring research-based MS or PhD programs to further pursue my research ambitions and contribute to advancing the field.
+                I am always open to collaborative in research opportunities and actively exploring research-based MS or PhD programs to further pursue my research ambitions and contribute to advancing the field.
            </p>
 
         </div>
